--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "d3": "^4.10.2",
+    "to-css": "^1.2.1",
     "vue": "^2.1.0",
     "vue-resize-directive": "^1.0.0"
   },
